@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 # 
-# RCS: @(#) $Id: all.tcl,v 1.8 1999/12/04 06:16:48 hobbs Exp $
+# RCS: @(#) $Id: all.tcl,v 1.9 2000/01/27 23:44:09 jenn Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -18,14 +18,7 @@ set ::tcltest::testSingleFile false
 set ::tcltest::testsDirectory [file dir [info script]]
 
 # We need to ensure that the testsDirectory is absolute
-#
-if {[string equal relative [file pathtype $::tcltest::testsDirectory]]} {
-    set cwd [pwd]
-    cd $::tcltest::testsDirectory
-    set ::tcltest::testsDirectory [pwd]
-    cd $cwd
-    unset cwd
-}
+::tcltest::normalizePath ::tcltest::testsDirectory
 
 puts stdout "Tcl $tcl_patchLevel tests running in interp:  [info nameofexecutable]"
 puts stdout "Tests running in working dir:  $::tcltest::testsDirectory"
